# psychonautwiki-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  result
ai/: README.md
ai/analysis/: feature-mapping.md  original-app-structure.md  technical-decisions.md
ai/progress/: completed-tasks.md  current-status.md  next-steps.md
ai/prompts/: initial-prompt.md
src/: app.rs  main.rs  persistence.rs
src/models/: consumer.rs  cumulative_dose.rs  experience.rs  ingestion.rs  interaction.rs  mod.rs  rating.rs  substance.rs  timed_note.rs
tests/: models.rs  persistence.rs
